--- a/client/i18n/en-GB.json
+++ b/client/i18n/en-GB.json
@@ -36,7 +36,7 @@
     "forecastHoursText": "Forecast hours",
     "unforecastHoursText": "Remove forecast",
     "periodForecastedText": "The period is forecasted with {{hours}}.",
-    "matchEventPanelHeaderText": "Resolve event",
+    "matchEventPanelHeaderText": "Resolve event manually",
     "unforecastingPeriodDescription": "Hang on a minute...",
     "unforecastingPeriodLabel": "Removing forecast for the period",
     "forecastingPeriodLabel": "Forecasting period",
