--- a/client/i18n/nn.json
+++ b/client/i18n/nn.json
@@ -24,11 +24,11 @@
     "splitWeekInfoText": "Valgt veke strekkjer seg over to månader. Naviger mellom periodane ved å bruka knappane over.",
     "projectInactiveErrorText": "Prosjektet er ikkje lenger aktivt. Rediger hendinga i Outlook.",
     "customerInactiveErrorText": "Kunden er ikkje lenger aktiv. Rediger hendinga i Outlook.",
-    "noProjectMatchFoundText": "Fann ikkje noko treff på prosjekt. Har du satt en kategori på hendelsen i Outlook?",
+    "noProjectMatchFoundText": "Fann ikkje noko treff på prosjekt. Har du satt en kategori på hendinga i Outlook?",
     "resolveProjectButtonLabel": "Løys manuelt",
     "ignoreEventButtonLabel": "Ignorer",
     "clearProjectMatchTooltipText": "Fjern match",
-    "matchOutlookInfoText": "**Tips:** Prøv å sørge for at <a href='{{webLink}}' target='_blank'>Outlook-avtalen</a> blir matcha automatisk. I nokre tilfelle kan det likevel vere nødvendig å matche manuelt.",
+    "matchOutlookInfoText": "**Tips:** Prøv å sørge for at<a href='{{webLink}}' target='_blank'>Outlook-hendinga</a> blir tilkobla et prosjekt automatisk. I nokre tilfelle kan det likevel vere nødvendig å løyse hendinga manuelt.",
     "didYouMeanText": "Meinte du",
     "eventNotFullyMatchedText": "Hendinga kunne ikkje matchast. Vi fann matchande kunde **{{name}}**, men ikkje noko prosjekt med den spesifiserte nøkkelen.",
     "unforecastHoursText": "Fjern prognose",
