--- a/client/i18n/nn.json
+++ b/client/i18n/nn.json
@@ -212,7 +212,7 @@
     "employeeLabel": "Tilsett",
     "yearLabel": "År",
     "roleLabel": "Rolle",
-    "signInText": "Logg inn",
+    "ms365signInText": "Logg inn med Microsoft 365",
     "signOutText": "Logg ut",
     "roleUser": "Brukar",
     "roleAdmin": "Administrator",
