refactor: hook useSubscriptionSettings

--- a/client/i18n/en-GB.json
+++ b/client/i18n/en-GB.json
@@ -312,7 +312,8 @@
     "exportExcel": "Export to Excel",
     "errorFallbackHeader": "It looks like something went wrong",
     "tryAgainText": "Try again, it might work...",
-    "githubIssueReportLinkText": "Report issue on GitHub"
+    "githubIssueReportLinkText": "Report issue on GitHub",
+    "ownerLabel": "Owner"
   },
   "navigation": {
     "timesheet": "Timesheet",
