--- a/client/i18n/nb.json
+++ b/client/i18n/nb.json
@@ -311,7 +311,8 @@
     "exportExcel": "Eksporter til Excel",
     "errorFallbackHeader": "Det ser ut som noe gikk galt",
     "tryAgainText": "Prøv igjen, det kan fungere ...",
-    "githubIssueReportLinkText": "Rapporter problem på GitHub"
+    "githubIssueReportLinkText": "Rapporter problem på GitHub",
+    "ownerLabel": "Eier"
   },
   "navigation": {
     "timesheet": "Timeliste",
