--- a/client/i18n/en-GB.json
+++ b/client/i18n/en-GB.json
@@ -128,7 +128,7 @@
     "editLabel": "Edit label",
     "addNewRole": "Add new role",
     "roleNameLabel": "Rolename",
-    "noTimeEntriesText": "\nThere are no confirmed hours for the selected months in the selected year.",
+    "noTimeEntriesText": "\nThere are no confirmed hours for the selected months/weeks in the selected year.",
     "editRole": "Edit role",
     "permissonsLabel": "Permissions",
     "tokenGeneratedText": "Make sure to copy your new personal access token now. You won’t be able to see it again!",
