--- a/client/i18n/nb.json
+++ b/client/i18n/nb.json
@@ -151,7 +151,8 @@
     "roleInUseMessage": "Denne rollen er tildelt {{count}} brukere og kan ikke slettes.",
     "userHiddenFromReportsLabel": "Skjult fra timeoversikt",
     "summaryViewProgressLabel": "Laster sammendrag",
-    "summaryViewProgressDescription": "For å gi deg de ferskeste resultatene, genererer vi et sammendrag fra de nyeste dataene... "
+    "summaryViewProgressDescription": "For å gi deg de ferskeste resultatene, genererer vi et sammendrag fra de nyeste dataene... ",
+    "userFieldAdSync": "Feltet synkroniseres automatisk fra Azure AD når brukeren logger på, og kan ikke endres i Did."
   },
   "reports": {
     "generatingReportLabel": "Genererer rapport",
