--- a/client/i18n/nn.json
+++ b/client/i18n/nn.json
@@ -151,7 +151,8 @@
     "roleInUseMessage": "Denne rolla er tildelt {{count}} brukarar og kan ikkje slettast.",
     "userHiddenFromReportsLabel": "Skjult fra timeoversikt",
     "summaryViewProgressLabel": "Lastar samandrag",
-    "summaryViewProgressDescription": "For å gi deg de ferskeste resultatene, genererer vi eit sammendrag fra de nyeste dataene..."
+    "summaryViewProgressDescription": "For å gi deg de ferskeste resultatene, genererer vi eit sammendrag fra de nyeste dataene...",
+    "userFieldAdSync": "Feltet synkroniseres automatisk fra Azure AD når brukeren logger på, og kan ikke endres i Did."
   },
   "reports": {
     "generatingReportLabel": "Genererer rapport",
