i18n: adjusted resource common.userReportSummary

--- a/client/i18n/nb.json
+++ b/client/i18n/nb.json
@@ -311,7 +311,7 @@
     "toDateLabel": "Til:",
     "rangeLabel": "Tidsrom",
     "totalHours": "Timer totalt",
-    "userReportSummary": "Du har jobbet **{{hours}}** timer for **{{projects}} **prosjekter _{{preset}}_. \nKlikk **Eksporter** for å eksportere timene dine til Excel.",
+    "userReportSummary": "Du har jobbet **{{hours}}** timer for {{projects}} prosjekter {{preset}}. \nKlikk _Eksporter til Excel_ for å eksportere timene dine til Excel.",
     "exportExcel": "Eksporter til Excel",
     "errorFallbackHeader": "Det ser ut som noe gikk galt",
     "tryAgainText": "Prøv igjen, det kan fungere ...",
