--- a/.changelog/0.10.0.md
+++ b/.changelog/0.10.0.md
@@ -12,6 +12,7 @@
 - Summary view moved to Reports
 - Support for start page user setting
 - Differentiating 0-hour weeks from unconfirmed weeks in Summary view #781
+- Synchronizes user photo from Azure AD #899
 
 ### Fixed
 
