chore: profile sync adjustments

--- a/client/i18n/en-GB.json
+++ b/client/i18n/en-GB.json
@@ -153,7 +153,9 @@
     "userHiddenFromReportsLabel": "Hidden from reports",
     "summaryViewProgressLabel": "Loading summary",
     "summaryViewProgressDescription": "To give you the freshest results, we're generating a summary from the latest data...",
-    "userFieldAdSync": "The field is automatically synchronized from Azure AD when the user logs in, and can not be modified in Did."
+    "userFieldAdSync": "The field is automatically synchronized from Azure AD when the user logs in, and can not be modified in Did.",
+    "adUserSyncUserPhotoLabel": "Synchronize user photo",
+    "adUserSyncUserPhotoDescription": "Synchronize user photo from Azure Active Directory when the users logs in."
   },
   "reports": {
     "generatingReportLabel": "Generating report",
