--- a/client/i18n/nn.json
+++ b/client/i18n/nn.json
@@ -152,7 +152,9 @@
     "userHiddenFromReportsLabel": "Skjult fra timeoversikt",
     "summaryViewProgressLabel": "Lastar samandrag",
     "summaryViewProgressDescription": "For å gi deg de ferskeste resultatene, genererer vi eit sammendrag fra de nyeste dataene...",
-    "userFieldAdSync": "Feltet synkroniseres automatisk fra Azure AD når brukeren logger på, og kan ikke endres i Did."
+    "userFieldAdSync": "Feltet synkroniseres automatisk fra Azure AD når brukeren logger på, og kan ikke endres i Did.",
+    "adUserSyncUserPhotoLabel": "Synkroniser profilbilete",
+    "adUserSyncUserPhotoDescription": "Synkroniser profilbilete fra Azure Active Directory når brukarane loggar på."
   },
   "reports": {
     "generatingReportLabel": "Genererer rapport",
