--- a/client/.docs/modules/_.md
+++ b/client/.docs/modules/_.md
@@ -1,6 +1,6 @@
-[did-client - v0.9.11](../README.md) / .
+[did-client - v0.9.11](../README.md) / /
 
-# Module: .
+# Module: /
 
 Main entry point for the App
 
