--- a/server/.docs/classes/_.app.md
+++ b/server/.docs/classes/_.app.md
@@ -1,8 +1,8 @@
-[did-server - v0.9.11](../README.md) / [.](../modules/_.md) / App
+[did-server - v0.9.11](../README.md) / [/](../modules/_.md) / App
 
 # Class: App
 
-[.](../modules/_.md).App
+[/](../modules/_.md).App
 
 Did Express.js App
 
