--- a/server/.docs/modules/_.md
+++ b/server/.docs/modules/_.md
@@ -1,6 +1,6 @@
-[did-server - v0.9.11](../README.md) / .
+[did-server - v0.9.11](../README.md) / /
 
-# Module: .
+# Module: /
 
 Main entry point for the http server (using `http`)
 
