feat: initial improvements to breadcrumb

--- a/client/.docs/modules/_.md
+++ b/client/.docs/modules/_.md
@@ -34,4 +34,4 @@ Bootstrapping the App
 
 **Returns:** *Promise*<void\>
 
-Defined in: [client/index.tsx:28](https://github.com/Puzzlepart/did/blob/dev/client/index.tsx#L28)
+Defined in: [index.tsx:28](https://github.com/Puzzlepart/did/blob/dev/client/index.tsx#L28)
